fixing the thumbnail to make it more visible

--- a/reddit-feed/src/app/app.component.css
+++ b/reddit-feed/src/app/app.component.css
@@ -68,6 +68,10 @@ a {
     margin-top: 16px;
 }
 
+.mr-16 {
+    margin-right: 16px;
+}
+
 .mb-16 {
     margin-bottom: 16px;
 }
