--- a/reddit-feed/src/app/reddit-entry/reddit-entry.component.css
+++ b/reddit-feed/src/app/reddit-entry/reddit-entry.component.css
@@ -4,7 +4,6 @@
 
 .thumbnail-container > *{
     margin-left: auto;
-    max-width: 150px;
 }
 
 .score {
